// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown with a root element renders correctly 1`] = `
<Markdown
  htmlAst={
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test paragraph.",
            },
          ],
          "properties": Object {},
          "tagName": "p",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test blockquote",
                    },
                  ],
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "blockquote",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test subheading",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "h3",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test link",
                    },
                  ],
                  "properties": Object {
                    "href": "https://www.example.com",
                  },
                  "tagName": "a",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test paragraph 2.",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "tagName": "section",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading 2",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test paragraph 3.",
                },
              ],
              "properties": Object {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test footnotes.",
            },
          ],
          "properties": Object {
            "class": "footnotes",
          },
          "tagName": "div",
          "type": "element",
        },
      ],
      "data": Object {
        "quirksMode": false,
      },
      "type": "root",
    }
  }
  root="article"
>
  <article>
    <p
      key="h-2"
    >
      Test paragraph.
    </p>
    <section
      key="h-3"
    >
      <Component
        key="h-4"
      >
        <Heading
          level="h2"
        >
          <h2
            css={
              Object {
                "a": Object {
                  "background": "none",
                  "textShadow": "none",
                },
                "code": Object {
                  "fontSize": "inherit",
                },
              }
            }
          >
            Test heading
          </h2>
        </Heading>
      </Component>
      <Blockquote
        key="h-5"
      >
        <blockquote
          css={
            Object {
              "@media only screen and (max-width:480px)": Object {
                "borderLeft": "0.29625rem solid #0f7b3b",
                "marginLeft": "-1.185rem",
                "paddingLeft": "0.88875rem",
              },
              "@media only screen and (min-width: 28rem)": Object {
                "borderLeft": "0.5925rem solid #0f7b3b",
                "marginLeft": 0,
                "paddingLeft": "0.9875rem",
              },
              "borderLeft": "0.29625rem solid #0f7b3b",
              "marginLeft": "-1.185rem",
              "paddingLeft": "0.88875rem",
            }
          }
        >
          <p
            key="h-6"
          >
            Test blockquote
          </p>
        </blockquote>
      </Blockquote>
      <section
        key="h-7"
      >
        <Component
          key="h-8"
        >
          <Heading
            level="h3"
          >
            <h3
              css={
                Object {
                  "a": Object {
                    "background": "none",
                    "textShadow": "none",
                  },
                  "code": Object {
                    "fontSize": "inherit",
                  },
                }
              }
            >
              Test subheading
            </h3>
          </Heading>
        </Component>
        <Link
          href="https://www.example.com"
          key="h-9"
        >
          <a
            css={
              Object {
                "backgroundImage": "linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #0f7b3b 1px, #0f7b3b 2px, rgba(0, 0, 0, 0) 2px)",
                "borderRadius": "0.3em",
                "code": Object {
                  "textShadow": "none",
                },
                "color": "#0f7b3b",
              }
            }
            href="https://www.example.com"
            rel="noopener"
            target="_blank"
          >
            Test link
          </a>
        </Link>
        <p
          key="h-10"
        >
          Test paragraph 2.
        </p>
      </section>
    </section>
    <section
      key="h-11"
    >
      <Component
        key="h-12"
      >
        <Heading
          level="h2"
        >
          <h2
            css={
              Object {
                "a": Object {
                  "background": "none",
                  "textShadow": "none",
                },
                "code": Object {
                  "fontSize": "inherit",
                },
              }
            }
          >
            Test heading 2
          </h2>
        </Heading>
      </Component>
      <p
        key="h-13"
      >
        Test paragraph 3.
      </p>
    </section>
    <div
      className="footnotes"
      key="h-14"
    >
      Test footnotes.
    </div>
  </article>
</Markdown>
`;

exports[`Markdown without a root element renders correctly 1`] = `
<Markdown
  htmlAst={
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test paragraph.",
            },
          ],
          "properties": Object {},
          "tagName": "p",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test blockquote",
                    },
                  ],
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "blockquote",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test subheading",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "h3",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test link",
                    },
                  ],
                  "properties": Object {
                    "href": "https://www.example.com",
                  },
                  "tagName": "a",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test paragraph 2.",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "tagName": "section",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading 2",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test paragraph 3.",
                },
              ],
              "properties": Object {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test footnotes.",
            },
          ],
          "properties": Object {
            "class": "footnotes",
          },
          "tagName": "div",
          "type": "element",
        },
      ],
      "data": Object {
        "quirksMode": false,
      },
      "type": "root",
    }
  }
>
  <p
    key="h-2"
  >
    Test paragraph.
  </p>
  <section
    key="h-3"
  >
    <Component
      key="h-4"
    >
      <Heading
        level="h2"
      >
        <h2
          css={
            Object {
              "a": Object {
                "background": "none",
                "textShadow": "none",
              },
              "code": Object {
                "fontSize": "inherit",
              },
            }
          }
        >
          Test heading
        </h2>
      </Heading>
    </Component>
    <Blockquote
      key="h-5"
    >
      <blockquote
        css={
          Object {
            "@media only screen and (max-width:480px)": Object {
              "borderLeft": "0.29625rem solid #0f7b3b",
              "marginLeft": "-1.185rem",
              "paddingLeft": "0.88875rem",
            },
            "@media only screen and (min-width: 28rem)": Object {
              "borderLeft": "0.5925rem solid #0f7b3b",
              "marginLeft": 0,
              "paddingLeft": "0.9875rem",
            },
            "borderLeft": "0.29625rem solid #0f7b3b",
            "marginLeft": "-1.185rem",
            "paddingLeft": "0.88875rem",
          }
        }
      >
        <p
          key="h-6"
        >
          Test blockquote
        </p>
      </blockquote>
    </Blockquote>
    <section
      key="h-7"
    >
      <Component
        key="h-8"
      >
        <Heading
          level="h3"
        >
          <h3
            css={
              Object {
                "a": Object {
                  "background": "none",
                  "textShadow": "none",
                },
                "code": Object {
                  "fontSize": "inherit",
                },
              }
            }
          >
            Test subheading
          </h3>
        </Heading>
      </Component>
      <Link
        href="https://www.example.com"
        key="h-9"
      >
        <a
          css={
            Object {
              "backgroundImage": "linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #0f7b3b 1px, #0f7b3b 2px, rgba(0, 0, 0, 0) 2px)",
              "borderRadius": "0.3em",
              "code": Object {
                "textShadow": "none",
              },
              "color": "#0f7b3b",
            }
          }
          href="https://www.example.com"
          rel="noopener"
          target="_blank"
        >
          Test link
        </a>
      </Link>
      <p
        key="h-10"
      >
        Test paragraph 2.
      </p>
    </section>
  </section>
  <section
    key="h-11"
  >
    <Component
      key="h-12"
    >
      <Heading
        level="h2"
      >
        <h2
          css={
            Object {
              "a": Object {
                "background": "none",
                "textShadow": "none",
              },
              "code": Object {
                "fontSize": "inherit",
              },
            }
          }
        >
          Test heading 2
        </h2>
      </Heading>
    </Component>
    <p
      key="h-13"
    >
      Test paragraph 3.
    </p>
  </section>
  <div
    className="footnotes"
    key="h-14"
  >
    Test footnotes.
  </div>
</Markdown>
`;
